[package]

name = "drive"
version = "0.0.1"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "This is Pre alpha, and not useful, no code worth looking at."
documentation = "http://dirvine.github.io/drive/"
repository = "https://github.com/dirvine/drive"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://www.maidsafe.net"

# until this is updated on crates.io we need to get from git
#[dependencies.fuse]
#git="https://github.com/zargony/rust-fuse"
